@@ -1,7 +1,6 @@
 package org.sudaping.itemevent.tabCompleter;
 
 import org.bukkit.Bukkit;
-import org.bukkit.OfflinePlayer;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
@@ -9,58 +8,32 @@ import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.sudaping.itemevent.Prefix;
-import org.sudaping.itemevent.commands.PrefixCommand;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.*;
 
 public class PrefixTab implements TabCompleter {
     @Override
     public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
-        List<String> completions = new ArrayList<>();
+        Set<String> completions = new HashSet<>();
         switch (args.length) {
-            case 1:{
-                completions.add("apply");
-                if (sender.isOp()){
-                    completions.addAll(List.of("add", "remove", "list", "give", "take", "set"));
-                }
-                break;
+            case 1 -> {
+                if (sender.isOp()) completions.addAll(List.of("add", "remove", "list", "give", "take"));
+                completions.add("set");
             }
-            case 2:{
-                if (args[0].equalsIgnoreCase("remove")) {
+            case 2 -> {
+                if (sender.isOp() && List.of("remove", "set", "give", "take").contains(args[0])) {
                     completions.addAll(Prefix.getPrefixMap().keySet());
-                    break;
                 }
-                if (args[0].equalsIgnoreCase("apply")) {
-                    if(sender instanceof Player player){
-                        completions.addAll(Prefix.getPlayerPrefixMap().get(player.getUniqueId()));
-                    }
-                    break;
-                }
-                if (List.of("give", "take", "set", "list").contains(args[0])) {
-                    completions.addAll(Prefix.getPlayerPrefixMap().keySet().stream().map(Bukkit::getOfflinePlayer).map(OfflinePlayer::getName).toList());
-                    completions.addAll(Arrays.stream(Bukkit.getOfflinePlayers())
-                            .map(OfflinePlayer::getName).toList());
-                    break;
+                if ("set".equalsIgnoreCase(args[0]) && sender instanceof Player player) {
+                    completions.addAll(Prefix.getPlayerPrefixMap().get(player.getUniqueId()));
                 }
             }
-            case 3:{
-                var ref = new Object() {
-                    List<String> strings = Prefix.getPlayerPrefixMap().get(Bukkit.getOfflinePlayer(args[1]).getUniqueId());
-                };
-                if (ref.strings == null) ref.strings = new ArrayList<>();
-                if (List.of("take", "set").contains(args[0])) {
-                    completions.addAll(ref.strings);
-                    break;
-                }
-                if (args[0].equalsIgnoreCase("give")){
-                    completions.addAll(Prefix.getPrefixMap().keySet().stream().filter(
-                            s -> !ref.strings.contains(s)).toList());
+            case 3 -> {
+                if (sender.isOp() && List.of("remove", "set", "give", "take").contains(args[0])) {
+                    completions.addAll(Bukkit.getOnlinePlayers().stream().map(Player::getName).toList());
                 }
             }
         }
-        return completions.stream().filter(s -> s.startsWith(args[args.length - 1])).collect(Collectors.toList());
+        return new ArrayList<>(completions.stream().filter(s -> s.startsWith(args[args.length - 1])).sorted().toList());
     }
 }
